Add comprehensive navigation features to Naija Navigator
Features added:
- Turn-by-turn navigation with Mapbox Directions API
- Real-time speed tracking and display
- Estimated arrival time (ETA) calculation
- Traffic-aware routing
- Weather information display
- Smart destination search with autocomplete
- iOS platform support
- Enhanced UI with navigation panel
- Location permissions handling

Technical improvements:
- Updated Mapbox tokens for all platforms
- Added navigation and weather services
- Implemented search widget with Mapbox Geocoding
- Added required dependencies (http, weather, intl, provider)
- Fixed Android permissions for network and location
- Configured Mapbox downloads token

Co-authored-by: Ona <no-reply@ona.com>

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,8 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Mapbox Nigeria App - Localized map application for Nigeria">
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -29,10 +30,18 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>myapp</title>
+  <title>Mapbox Nigeria App</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Mapbox GL JS -->
+  <script src='https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
+  <script>
+    // Set Mapbox access token for web
+    window.mapboxAccessToken = 'pk.eyJ1IjoidG9uYnkiLCJhIjoiY21nbDVzYjdhMHhqMDJycXFxaWlkcnY2YiJ9._0ujjRjoFjGso2ZU4Zn6eQ';
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
